- General
	- Changed some translatable debug messages to use %s 
	  instead of the function name, and removed gettext from 
	  two strings that had no actual words in them that
	  should be translated.	 Suggested originally by
	  Christian Rose.
	- Fix subexpression replacement to work consistently.
	  Affects search.c:replace_regexp() and 
	  utils.c:strstrwrapper() (David Benbennick).
- cut.c:
  do_cut_text()
	- Fix incorrect cursor location when cutting long lines
	  (David Benbennick).
- files.c:
  open_file()
	- Fix FD leak with file load error (David Benbennick).
  save_history()
	- Fix nrealloc return value being ignored (David Benbennick).
- nano.c:
  do_preserve_msg():
	- Unsplit error message into a single fprintf call (Jordi).
  do_int_spell_fix(), do_int_speller()
	- Fix crashes with mark position, current_x position, 
	  and edit_update args (David Benbennick).
  main()
	- Call load_file with arg 0 for insert, as we aren't really
	  doing an insert, allows new_file() to run if we open a 
	  non-file at startup.
  usage()
  	- Remove gettext markings from -p/--preserve (Jordi).
	- Revamp -H option message to fit in 80 column terminal.
  window_init()
	- Fix leaking *WINDOWs (no pun intended) (David Benbennick).
- search.c:
  do_search(), do_replace_loop()
	- Fix edit_update call to use CENTER instead of current_x
	  (related to David Benbennick's fixes for spelling).
  do_replace_loop()
	- Fix various bugs having to do with replace string length
	  and positioning (David Benbennick).
  edit_refresh()
	- Fix cursor being above as well as below the current screen
	  (David Benbennick).
- winio.c:
  bottombars()
	- Change strcpy of gettext() "Up" string to strncpy of max
	  width 8, to stop stupid strcpy crash.
- nanorc.sample:
	- Change comment to say magenta instead of purple.

GNU nano 1.1.99pre1 - 2003.01.17
- General:
	- New date format for NEWS and ChangeLog.
	- Completely removed PICO_MODE, as with the search/replace